; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dragonfly.c_dragonfly_get_rand_2_to_r_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dragonfly.c_dragonfly_get_rand_2_to_r_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_bignum = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_bignum*, %struct.crypto_bignum*)* @dragonfly_get_rand_2_to_r_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dragonfly_get_rand_2_to_r_1(%struct.crypto_bignum* %0, %struct.crypto_bignum* %1) #0 {
  %3 = alloca %struct.crypto_bignum*, align 8
  %4 = alloca %struct.crypto_bignum*, align 8
  store %struct.crypto_bignum* %0, %struct.crypto_bignum** %3, align 8
  store %struct.crypto_bignum* %1, %struct.crypto_bignum** %4, align 8
  %5 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %6 = load %struct.crypto_bignum*, %struct.crypto_bignum** %4, align 8
  %7 = call i64 @crypto_bignum_rand(%struct.crypto_bignum* %5, %struct.crypto_bignum* %6)
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %11 = call i32 @crypto_bignum_is_zero(%struct.crypto_bignum* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %9
  %14 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %15 = call i32 @crypto_bignum_is_one(%struct.crypto_bignum* %14)
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  br label %18

18:                                               ; preds = %13, %9, %2
  %19 = phi i1 [ false, %9 ], [ false, %2 ], [ %17, %13 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i64 @crypto_bignum_rand(%struct.crypto_bignum*, %struct.crypto_bignum*) #1

declare dso_local i32 @crypto_bignum_is_zero(%struct.crypto_bignum*) #1

declare dso_local i32 @crypto_bignum_is_one(%struct.crypto_bignum*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
